--- a/styles.css
+++ b/styles.css
@@ -2,17 +2,22 @@
 .navbar{
 	background-color:#6e072d;
 	display:flex;
+	height:auto;
+	width:auto;
+	justify-content:space-between;
+	align-items:center;
 }
 .navbar ul{
 	display:flex;
 	text-decoration:none;
 	list-style-type: none;
-	
+	justify-content:space-between;
+	align-items:center;
 }
 .navbar ul a{
 	text-decoration:none;
 	font-size:18px;
+	color:white;
 	border : 2px solid white;
-	height:100%;
-	/*padding: 18px 18vh 18px 18vh ;*/
+	padding: 18px 27px 18px 27px ;
 }
